# sbom-attack-chain-prediction

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
scripts/: download_data.py  package_data.py
src/sbom_toolkit/: __init__.py
src/sbom_toolkit/cli/: __init__.py  main.py  output.py  utils.py
src/sbom_toolkit/cli/commands/: __init__.py  cleanup.py  generate.py  kg_build.py  kg_chat.py  kg_summary.py  ml.py  performance.py  pipeline.py  scan.py  test.py  visualize.py
src/sbom_toolkit/cli/tools/: health.py  tools.py
src/sbom_toolkit/intelligence/: __init__.py  prompts.py
src/sbom_toolkit/intelligence/data_processing/: attack_parser.py  capec_parser.py  cwe_parser.py  nvd_parser.py
src/sbom_toolkit/intelligence/evaluation/: __init__.py  context_builder.py  embedding_cache.py  framework.py  metrics.py  reporting.py  test_cache.py  test_cases.py  test_runner.py
src/sbom_toolkit/intelligence/graph/: __init__.py  builder.py  resolver.py  schema.py
src/sbom_toolkit/intelligence/retrieval/: __init__.py  component_analyzer.py  knowledge_graph_manager.py  mcp_system_refactored.py  mcp_tools.py  query_engine.py  security_analyzer.py  stream_handler.py
src/sbom_toolkit/ml/: cascade_data_loader.py  cascade_predictor.py  gnn_predict.py  gold_reader.py  hetero_processing.py  hgat.py  hgat_eval_external.py  hgat_eval_labels.py  hgat_predict.py  predict_sbom_cascades.py  prediction.py  processing.py  train_cascade_predictor.py  train_hgat.py  training.py
src/sbom_toolkit/pipeline/: __init__.py  environment.py  repository.py  tools.py
src/sbom_toolkit/pipeline/sbom/: __init__.py  filtering.py  generation.py
src/sbom_toolkit/pipeline/security/: __init__.py  scanning.py
src/sbom_toolkit/shared/: __init__.py  caching.py  component_utils.py  cvss_utils.py  exceptions.py  logging.py  models.py  output.py  streaming.py  version.py
src/sbom_toolkit/visualization/: __init__.py  pyvis_visualizer.py  unified.py
src/sbom_toolkit/visualization/builders/: template_builder.py
src/sbom_toolkit/visualization/core/: __init__.py  data_transformer.py  graph_processors.py  prediction_loader.py  unified_visualizer.py
src/sbom_toolkit/visualization/engines/: __init__.py  circular_engine.py  force_directed_engine.py  (+1 more)
supply-chain-seeds/: README.md  incidents.json  seeds.json
tests/: __init__.py  conftest.py  test_caching.py  test_exceptions.py  test_models.py  test_visualization.py
(+17 files in other folders)
