[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sbom-toolkit"
version = "0.1.0"
description = "SBOM generation, vulnerability scanning, and AI-powered security analysis for research"
readme = "README.md"
authors = [{name = "Laura Baird"}]
license = {text = "MIT"}
requires-python = ">=3.13"

dependencies = [
    # Core dependencies
    "requests>=2.32.0",
    "urllib3>=2.5.0",
    "charset-normalizer>=3.4.0",
    "rich>=12.0.0",
    "cvss>=2.4",
    "click>=8.0.0",
    "pydantic>=2.11.0",
    # Data processing
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "networkx>=2.8.0",
    # ML/AI
    # "torch>=1.12.0",
    # "torch-geometric>=2.1.0",
    "openai>=1.0.0",
    # Visualization
    "dash>=2.7.0",
    "plotly>=5.11.0",
    "pyvis>=0.3.0",
    "matplotlib>=3.10.3",
    "torch>=2.7.1",
    "torch-geometric>=2.6.1",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "pytest>=8.4.1",
]

[project.scripts]
sbom = "sbom_toolkit.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ty]
# ty (Astral's Python type checker) configuration

[tool.ty.environment]
python-version = "3.13"

[tool.ty.rules]
# Configure rule severity levels
# "ignore" = disable the rule
# "warn" = warning diagnostic
# "error" = error diagnostic (causes non-zero exit code)
possibly-unresolved-reference = "warn"
division-by-zero = "error"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.4",
    "ty>=0.0.1a14",
    "vermin>=1.6.0",
]
